ufcoder.pas


function ValueBlockInSectorIncrement_PK(increment_value: LongInt;
                                        sector_address: Byte;
                                        block_in_sector_address: Byte;
                                        auth_mode: Byte;
                                        const key: PByte): DL_STATUS  stdcall;


function ValueBlockDecrement_PK(decrement_value:LongInt;
                                block_address: Byte;
                                auth_mode: Byte;
                                const key: PByte): DL_STATUS stdcall;


function ValueBlockInSectorDecrement_PK(decrement_value: LongInt;
                                        sector_address: Byte;
                                        block_in_sector_address: Byte;
                                        auth_mode: Byte;
                                        const key: PByte): DL_STATUS  stdcall;


function GetReaderHardwareVersion(const bMajor:Pbyte;
                                  const bMinor:Pbyte): DL_STATUS  stdcall;

function GetReaderFirmwareVersion(const bMajor:Pbyte;
                                  const bMinor:Pbyte): DL_STATUS  stdcall;
function UFR_Status2String(const status:DL_STATUS):PAnsiChar stdcall;
function GetDllVersion(): LongInt stdcall;
function GetBuildNumber(const build:Pbyte):DL_STATUS stdcall;
function UfrRedLightControl(light_status:integer):DL_STATUS stdcall;
function CardType2String(var Ctype : Byte):Ansistring ;
function MaxTotalBytes(bCardType: Byte): integer;

    function  MaxBytes(bCardType:Byte):integer;inline;
    function  MaxBlocks(bCardType:Byte) :Integer; inline;
    function bintoAscii(const bin: array of byte): String;
    function bintostr(const bin: array of byte): string;
    function BytesPerBlock(bCardType: Byte): Integer;

function    GetReaderDescription:c_string;stdcall;
function GetReaderSerialDescription(pSerialDescription: c_String): DL_STATUS stdcall;



////////////////////////////////////////////////////////////////////////////////

////////////////////////////////////////////////////////////////////////////////

////////////////////////////////////////////////////////////////////////////////

implementation

function    GetReaderDescription:c_string;stdcall; external libdll;
function GetReaderSerialDescription(pSerialDescription: c_String): DL_STATUS stdcall; external libdll;
function CardType2String(var Ctype : Byte):Ansistring;
begin
 case Ctype of
 $01 : result :='MIFARE_ULTRALIGHT'         ;
 $02 : result :='MIFARE_ULTRALIGHT_EV1_11'  ;
 $03 : result :='MIFARE_ULTRALIGHT_EV1_21'  ;
 $04 : result :='MIFARE_ULTRALIGHT_C'       ;
 $05 : result :='NTAG_203'                  ;
 $06 : result :='NTAG_210'                  ;
 $07 : result :='NTAG_212'                  ;
 $08 : result :='NTAG_213'                  ;
 $09 : result :='NTAG_215'                  ;
 $0A : result :='NTAG_216'                  ;
 $20 : result :='MIFARE_MINI'               ;
 $21 : result :='MIFARE_CLASSIC_1K'         ;
 $22 : result :='MIFARE_CLASSIC_4K'         ;
 $23 : result :='MIFARE_PLUS_S_2K'          ;
 $24 : result :='MIFARE_PLUS_S_4K'          ;
 $25 : result :='MIFARE_PLUS_X_2K'          ;
 $26 : result :='MIFARE_PLUS_X_4K'          ;
 $27 : result :='MIFARE_DESFIRE'            ;
 $28 : result :='MIFARE_DESFIRE_EV1_2K'     ;
 $29 : result :='MIFARE_DESFIRE_EV1_4K'     ;
 $2A : result :='MIFARE_DESFIRE_EV1_8K'     ;
 $2B..$FF : result :='UNKOWN';
 end;

end;



function ReaderOpen:DL_STATUS;stdcall;external libdll;
function ReaderReset:DL_STATUS;stdcall; external libdll;
function ReaderClose:DL_STATUS;stdcall; external libdll;
function ReaderSoftRestart:DL_STATUS;stdcall; external libdll;
function GetReaderType(const lpulReaderType: PLongInt):DL_STATUS;stdcall; external  libdll;
function GetReaderSerialNumber(const lpulSerialNumber: PLongInt):DL_STATUS;stdcall; external libdll;
function GetDllVersionStr(): PChar stdcall;external libdll;
function ReaderUISignal(light_signal_mode: Byte;beep_signal_mode: Byte):DL_STATUS;stdcall; external libdll;
function GetCardId(var lpucCardType: Byte;var lpulCardSerial: LongInt):DL_STATUS;stdcall; external libdll;


//function ReaderOpenEx(reader_type: Word; port_name: pchar; port_interface: Word; arg: pchar):DL_STATUS;stdcall;external libdll;


function GetCardIdEx( lpuSak:PByte;
	 	     aucUid:PByte;
                      lpucUidSize:PByte):DL_STATUS;stdcall; external libdll;

function GetDlogicCardType(var pCardType:Byte):DL_STATUS ;external libdll;

function ReaderKeyWrite(const aucKey:PByte;ucKeyIndex: Byte):DL_STATUS;stdcall; external libdll;


function LinearRead(aucData:PByte;
                    usLinearAddress: Word;
                    usDataLength: Word;
                    var lpusBytesReturned: Word;
                    ucKeyMode: Byte;
                    ucReaderKeyIndex: Byte): DL_STATUS stdcall;external libdll;
function LinRowRead(aucData:PByte;
                    usLinearAddress: Word;
                    usDataLength: Word;
                    var lpusBytesReturned: Word;
                    ucKeyMode: Byte;
                    ucReaderKeyIndex: Byte): DL_STATUS stdcall;external libdll;


function LinearWrite(const aucData:PByte;
                     usLinearAddress: Word;
                     usDataLength: Word;
                     var lpusBytesWritten: Word;
                     ucKeyMode: Byte;
                     ucReaderKeyIndex: Byte):DL_STATUS;stdcall; external libdll;

function LinearFormatCard(const new_key_A: PByte;
                          blocks_access_bits: Byte;
                          sector_trailers_access_bits: Byte;
                          sector_trailers_byte9: Byte;
                          const new_key_B: PByte;
                          var SectorsFormatted:Byte;
                          auth_mode: Byte;
                          key_index: Byte): DL_STATUS ;stdcall;external libdll;

function ReaderKeysLock(const bPassword:PByte):DL_STATUS stdcall;external libdll;
function ReaderKeysUnlock(const bPassword:PByte):DL_STATUS stdcall;external libdll;



function ReadUserData(aucData:PByte): DL_STATUS  stdcall;external libdll;

function WriteUserData(const aucData: PByte): DL_STATUS  stdcall;external libdll;



function BlockRead(data:PByte;
                   block_address: Byte;
                   auth_mode: Byte;
                   key_index: Byte): DL_STATUS stdcall;external libdll;


function BlockWrite(const data: Pointer;
                    block_address: Byte;
                    auth_mode: Byte;
                    key_index: Byte): DL_STATUS  stdcall; external libdll;


function BlockInSectorRead(data:PByte;
                           sector_address: Byte;
                           block_in_sector_address: Byte;
                           auth_mode: Byte;
                           key_index: Byte): DL_STATUS  stdcall;external libdll;


function BlockInSectorWrite(const data: PByte;
                            sector_address: Byte;
                            block_in_sector_address: Byte;
                            auth_mode: Byte;
                            key_index: Byte): DL_STATUS stdcall;external libdll;


function SectorTrailerWrite(addressing_mode: Byte;
                            address: Byte;
                            const new_key_A: PByte;
                            block0_access_bits: Byte;
                            block1_access_bits: Byte;
                            block2_access_bits: Byte;
                            sector_trailer_access_bits: Byte;
                            sector_trailer_byte9:Byte;
                            const new_key_B: PByte;
                            auth_mode:Byte;
                            key_index:Byte): DL_STATUS  stdcall;external libdll;

function SectorTrailerWriteUnsafe(addressing_mode: Byte;
                                  address: Byte;
                                  const sector_trailer: PByte;
                                  auth_mode: Byte;
                                  key_index: Byte): DL_STATUS stdcall;external libdll;


function ValueBlockRead(value: PLongint;
                        var value_addr: Byte;
                        block_address: Byte;
                        auth_mode: Byte;
                        key_index: Byte): DL_STATUS stdcall;external libdll;


function ValueBlockInSectorRead(value:PLongint;
                                var value_addr: Byte;
                                sector_address: Byte;
                                block_in_sector_address: Byte;
                                auth_mode: Byte;
                                key_index: Byte): DL_STATUS stdcall;external libdll;


function ValueBlockWrite(value: LongInt;
                         value_addr: Byte;
                         block_address: Byte;
                         auth_mode: Byte;
                         key_index: Byte): DL_STATUS  stdcall;external libdll;


function ValueBlockInSectorWrite(value: LongInt;
                                 value_addr: Byte;
                                 sector_address: Byte;
                                 block_in_sector_address: Byte;
                                 auth_mode: Byte;
                                 key_index: Byte): DL_STATUS stdcall;external libdll;


function ValueBlockIncrement(increment_value: LongInt;
                             block_address: Byte;
                             auth_mode: Byte;
                             key_index: Byte): DL_STATUS  stdcall;external libdll;


function ValueBlockInSectorIncrement(increment_value: LongInt;
                                     sector_address: Byte;
                                     block_in_sector_address: Byte;
                                     auth_mode: Byte;
                                     key_index: Byte): DL_STATUS stdcall;external libdll;


function ValueBlockDecrement(decrement_value:LongInt;
                             block_address: Byte;
                             auth_mode: Byte;
                             key_index: Byte): DL_STATUS stdcall ;external libdll;


function ValueBlockInSectorDecrement(decrement_value: LongInt;
                                     sector_address: Byte;
                                     block_in_sector_address: Byte;
                                     auth_mode: Byte;
                                     key_index: Byte): DL_STATUS stdcall;external libdll;


function BlockRead_AKM1(data:PByte;
                        block_address: Byte;
                        auth_mode: Byte): DL_STATUS stdcall;external libdll;


function BlockWrite_AKM1(const data: PByte;
                         block_address: Byte;
                         auth_mode: Byte): DL_STATUS  stdcall;external libdll;


function BlockInSectorRead_AKM1(data:PByte;
                                sector_address: Byte;
                                block_in_sector_address: Byte;
                                auth_mode: Byte): DL_STATUS  stdcall;external libdll;


function BlockInSectorWrite_AKM1(const data: PByte;
                                 sector_address: Byte;
                                 block_in_sector_address: Byte;
                                 auth_mode: Byte): DL_STATUS  stdcall;external libdll;


function LinearRead_AKM1(data:PByte;
                         linear_address: Word;
                         length: Word;
                         var bytes_returned: Word;
                         auth_mode: Byte): DL_STATUS stdcall;external libdll;


function LinearWrite_AKM1(const data: PByte;
                          linear_address: Word;
                          length: Word;
                          var bytes_written: Word;
                          auth_mode: Byte): DL_STATUS  stdcall;external libdll;

